# genai-sandbox

./: .env.example  .gitignore  LLM_flow_control.ipynb  README.md  cv_qa_stream.py  pyproject.toml
01_cv_qa_basic/: README.md  chat_with_cv.ipynb  main.py
02_cv_qa_streaming/: README.md  cv_qa_stream.py
03_llm_flow_control/: README.md
